@@ -16,6 +16,7 @@
 
 package edu.ur.ir.web.action.institution;
 
+import java.io.File;
 import java.util.Collection;
 
 import org.apache.log4j.Logger;
@@ -23,6 +24,7 @@ import org.apache.log4j.Logger;
 import edu.ur.ir.index.IndexProcessingType;
 import edu.ur.ir.index.IndexProcessingTypeService;
 import edu.ur.ir.institution.InstitutionalCollection;
+import edu.ur.ir.institution.InstitutionalCollectionIndexService;
 import edu.ur.ir.institution.InstitutionalCollectionService;
 import edu.ur.ir.institution.InstitutionalItemIndexProcessingRecordService;
 import edu.ur.ir.repository.Repository;
@@ -36,6 +38,10 @@ import edu.ur.ir.web.table.Pager;
  * Action to view institutional collections.
  * 
  * @author Nathan Sarr
+ *
+ */
+/**
+ * @author ideazoft
  *
  */
 public class ManageInstitutionalCollections extends Pager implements UserIdAware {
@@ -60,7 +66,7 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
     private Collection <InstitutionalCollection> collectionPath;
 	
 	/** The collection that owns the listed items and personal collections */
-	private Long parentCollectionId = new Long(0);
+	private Long parentCollectionId = Long.valueOf(0);
 	
 	/** current parent collection null if at the root */
 	private InstitutionalCollection parent = null;
@@ -77,6 +83,8 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 	/** Institutional Collection service */
 	private InstitutionalCollectionService institutionalCollectionService;
 	
+
+
 	/** service for marking items that need to be indexed */
 	private InstitutionalItemIndexProcessingRecordService institutionalItemIndexProcessingRecordService;
 
@@ -97,6 +105,17 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 	/** Row End */
 	private int rowEnd;
 	
+	/** indicates this the first time the user viewing the search */
+	private boolean searchInit = true;
+	
+	/** Indicates this is a browse view */
+	private String viewType = "browse";
+	
+	/** institutional collection index service */
+	private InstitutionalCollectionIndexService institutionalCollectionIndexService;
+	
+
+
 	/** Default constructor */
 	public  ManageInstitutionalCollections()
 	{
@@ -136,7 +155,8 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 		log.debug("Delete collection system objects called");
 		
 		IrUser user = userService.getUser(userId, false);
-		
+		Repository repo = repositoryService.getRepository(Repository.DEFAULT_REPOSITORY_ID, false);
+        File collectionFileIndex = new File(repo.getInstitutionalCollectionIndexFolder());		
 		if( collectionIds != null )
 		{
 		    for(int index = 0; index < collectionIds.length; index++)
@@ -148,6 +168,7 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 				// only index if the item was added directly to the collection
 				IndexProcessingType processingType = indexProcessingTypeService.get(IndexProcessingTypeService.DELETE); 
 				institutionalItemIndexProcessingRecordService.processItemsInCollection(collection, processingType);
+				institutionalCollectionIndexService.delete(collection.getId(), collectionFileIndex);
 			    institutionalCollectionService.deleteCollection(collection, user);
 		    }
 		}
@@ -239,12 +260,13 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 		this.collectionsDeleted = collectionsDeleted;
 	}
 
+	/**
+	 * Get the collection deleted message.
+	 * 
+	 * @return
+	 */
 	public String getcollectionsDeletedMessage() {
 		return collectionsDeletedMessage;
-	}
-
-	public void setcollectionsDeletedMessage(String collectionsDeletedMessage) {
-		this.collectionsDeletedMessage = collectionsDeletedMessage;
 	}
 	
 	/**
@@ -265,108 +287,171 @@ public class ManageInstitutionalCollections extends Pager implements UserIdAware
 		return userService.getUser(userId,false);
 	}
 
-	public RepositoryService getRepositoryService() {
-		return repositoryService;
-	}
-
+	/**
+	 * Set the repository service.
+	 * 
+	 * @param repositoryService
+	 */
 	public void setRepositoryService(RepositoryService repositoryService) {
 		this.repositoryService = repositoryService;
 	}
 
-	public UserService getUserService() {
-		return userService;
-	}
-
+	/**
+	 * Set the user service.
+	 * 
+	 * @param userService
+	 */
 	public void setUserService(UserService userService) {
 		this.userService = userService;
 	}
 
+	/**
+	 * Get the deleted collection deleted message.
+	 * 
+	 * @return
+	 */
 	public String getCollectionsDeletedMessage() {
 		return collectionsDeletedMessage;
 	}
 
-	public void setCollectionsDeletedMessage(String collectionsDeletedMessage) {
-		this.collectionsDeletedMessage = collectionsDeletedMessage;
-	}
-
+	/**
+	 * Get the user id.
+	 * 
+	 * @return
+	 */
 	public Long getUserId() {
 		return userId;
 	}
 
-	public void setCollectionPath(Collection<InstitutionalCollection> collectionPath) {
-		this.collectionPath = collectionPath;
-	}
-
+	/**
+	 * Get the repository.
+	 * 
+	 * @return
+	 */
 	public Repository getRepository() {
 		return repositoryService.getRepository(Repository.DEFAULT_REPOSITORY_ID, false);
 	}
-
-	public InstitutionalCollectionService getInstitutionalCollectionService() {
-		return institutionalCollectionService;
-	}
-
-	public void setInstitutionalCollectionService(
-			InstitutionalCollectionService institutionalCollectionService) {
-		this.institutionalCollectionService = institutionalCollectionService;
-	}
-
+	
+	/**
+	 * Get the parent.
+	 * 
+	 * @return
+	 */
 	public InstitutionalCollection getParent() {
 		return parent;
 	}
 
-	public void setParent(InstitutionalCollection parent) {
-		this.parent = parent;
-	}
-
+	/**
+	 * Get the institutional collections
+	 * 
+	 * @return
+	 */
 	public Collection<InstitutionalCollection> getInstitutionalCollections() {
 		return institutionalCollections;
 	}
 
-	public void setInstitutionalCollections(
-			Collection<InstitutionalCollection> institutionalCollections) {
-		this.institutionalCollections = institutionalCollections;
-	}
-
-
+	/**
+	 * Get the sort type.
+	 * 
+	 * @return
+	 */
 	public String getSortType() {
 		return sortType;
 	}
+	
+	/**
+	 * Set the sort type.
+	 * 
+	 * @param sortType
+	 */
 	public void setSortType(String sortType) {
 		this.sortType = sortType;
 	}
+	
+	/**
+	 * Get the total hits found.
+	 * 
+	 * @see edu.ur.ir.web.table.Pager#getTotalHits()
+	 */
 	public int getTotalHits() {
 		return totalHits;
 	}
-	public void setTotalHits(int totalHits) {
-		this.totalHits = totalHits;
-	}
+	
+	/**
+	 * Get the row end.
+	 * 
+	 * @return
+	 */
 	public int getRowEnd() {
 		return rowEnd;
 	}
+	
+	/**
+	 * Set the row end.
+	 * 
+	 * @param rowEnd
+	 */
 	public void setRowEnd(int rowEnd) {
 		this.rowEnd = rowEnd;
 	}
 
-
-	public InstitutionalItemIndexProcessingRecordService getInstitutionalItemIndexProcessingRecordService() {
-		return institutionalItemIndexProcessingRecordService;
-	}
-
-
+	/**
+	 * Set the institutional item index processing record service.
+	 * 
+	 * @param institutionalItemIndexProcessingRecordService
+	 */
 	public void setInstitutionalItemIndexProcessingRecordService(
 			InstitutionalItemIndexProcessingRecordService institutionalItemIndexProcessingRecordService) {
 		this.institutionalItemIndexProcessingRecordService = institutionalItemIndexProcessingRecordService;
 	}
 
-
-	public IndexProcessingTypeService getIndexProcessingTypeService() {
-		return indexProcessingTypeService;
-	}
-
-
+	/**
+	 * Set the index processing type service.
+	 *  
+	 * @param indexProcessingTypeService
+	 */
 	public void setIndexProcessingTypeService(
 			IndexProcessingTypeService indexProcessingTypeService) {
 		this.indexProcessingTypeService = indexProcessingTypeService;
 	}
+	
+	/**
+	 * Get the search init setting.
+	 * 
+	 * @return
+	 */
+	public boolean getSearchInit() {
+		return searchInit;
+	}
+
+	/**
+	 * Get the view type.
+	 * 
+	 * @return
+	 */
+	public String getViewType() {
+		return viewType;
+	}
+	
+	/**
+	 * Set the institutional collection index service.
+	 * 
+	 * @param institutionalCollectionIndexService
+	 */
+	public void setInstitutionalCollectionIndexService(
+			InstitutionalCollectionIndexService institutionalCollectionIndexService) {
+		this.institutionalCollectionIndexService = institutionalCollectionIndexService;
+	}
+
+	/**
+	 * Set the institutional collection service.
+	 * 
+	 * @param institutionalCollectionService
+	 */
+	public void setInstitutionalCollectionService(
+			InstitutionalCollectionService institutionalCollectionService) {
+		this.institutionalCollectionService = institutionalCollectionService;
+	}
+
 
 }
